--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,24 @@
 [build]
-  functions = "netlify/functions"
   publish = "."
+  functions = "netlify/functions"
+
+[build.environment]
+  NODE_VERSION = "18"
+
+[[headers]]
+  for = "/*"
+  [headers.values]
+    X-Frame-Options = "DENY"
+    X-Content-Type-Options = "nosniff"
+    X-XSS-Protection = "1; mode=block"
+    Referrer-Policy = "strict-origin-when-cross-origin"
+
+[[headers]]
+  for = "/.netlify/functions/*"
+  [headers.values]
+    Access-Control-Allow-Origin = "*"
+    Access-Control-Allow-Methods = "GET, POST, OPTIONS"
+    Access-Control-Allow-Headers = "Content-Type"
 
 [functions]
   node_bundler = "esbuild"
@@ -9,6 +27,3 @@
   from = "/api/*"
   to = "/.netlify/functions/:splat"
   status = 200
-
-[build.environment]
-  NODE_VERSION = "18"
