재배포 수정 2

--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "test": "python3 serve.py"
   },
   "dependencies": {
-    "googleapis": "^128.0.0",
-    "node-fetch": "^2.7.0"
+    "googleapis": "^128.0.0"
   },
   "type": "commonjs",
   "devDependencies": {
